syntax = "proto3";
option go_package = "github.com/QUDUSKUNLE/microservices/services/organization-service/protogen/golang/organization";

import "google/api/annotations.proto";

service OrganizationService {
  rpc CreateOrganization(CreateOrganizationRequest) returns (CreateOrganizationResponse) {
    option (google.api.http) = {
      post: "/v1/organization",
      body: "*"
    };
  }
}

message CreateOrganizationRequest {
  string user_id = 1 [json_name = "user_id"];
}

message CreateOrganizationResponse {
  string id = 1 [json_name = "id"];
  string created_at = 2 [json_name = "created_at"];
  string updated_at = 3 [json_name = "updated_at"];
}
